<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Activites.PhoneActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondText"
        android:layout_marginTop="8dp"
        android:textSize="15sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/tv_Verify"
        app:layout_constraintStart_toStartOf="@+id/tv_Verify"
        app:layout_constraintTop_toBottomOf="@+id/tv_Verify" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/phoneBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textbox_outline"
                android:ems="10"
                android:hint="@string/ph_hint"
                android:inputType="phone"
                android:padding="10dp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card"
        tools:ignore="MissingConstraints">

        <FrameLayout
            android:id="@+id/framelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/continueBtn1"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/btn_background"
                android:backgroundTint="@color/blue"
                android:ems="10"
                android:shadowRadius="12"
                android:text="@string/Continue"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/linear2"
                app:layout_constraintRight_toRightOf="@id/linear2"
                app:layout_constraintTop_toBottomOf="@id/linear1" />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone" />


        </FrameLayout>


    </LinearLayout>

 

</androidx.constraintlayout.widget.ConstraintLayout>