<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Activites.PhoneActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_923001234567"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_otp_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:phoneNumber="true"
        android:text="@string/otp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_Verify"
        app:layout_constraintStart_toStartOf="@+id/tv_Verify"
        app:layout_constraintTop_toBottomOf="@+id/tv_Verify" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_otp_desc"
        android:gravity="center"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/inputcode1"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LableFor"/>


        <EditText
            android:id="@+id/inputcode2"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LableFor"/>

        <EditText
            android:id="@+id/inputcode3"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LableFor"/>

        <EditText
            android:id="@+id/inputcode4"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LableFor"/>

        <EditText
            android:id="@+id/inputcode5"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LableFor"/>

        <EditText
            android:id="@+id/inputcode6"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LableFor"/>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/didnt_receive_otp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/ResendOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/resend"
            android:textColor="@color/resend"
            android:textSize="15sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear1">


        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="00:59"
            android:textStyle="bold"
            android:textSize="12dp"
            android:textColor="@color/resend"
            app:layout_constraintTop_toBottomOf="@id/linear1" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linar"
        tools:ignore="MissingConstraints">

        <FrameLayout
            android:id="@+id/framelayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/continueBtn2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btn_background"
                android:backgroundTint="@color/blue"
                android:ems="10"
                android:shadowRadius="12"
                android:text="@string/Continue"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/linear2"
                app:layout_constraintRight_toRightOf="@id/linear2"
                app:layout_constraintTop_toBottomOf="@id/linear2" />

            <ProgressBar
                android:id="@+id/progressbar1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone" />


        </FrameLayout>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>